<resources>
    <string name="app_name">facial-features-detection</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="iniciar">Iniciar</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="enviar">Enviar</string>
    <string name="nova">Nova</string>
    <string name="posicao">Posicionamento</string>
    <string name="tamanho">Tamanho</string>
    <string name="facedetectada">Face detectada</string>
</resources>